Allow JRuby’s module