@@ -20,7 +20,9 @@
 # @author Peter Withers <peter.withers@mpi.nl>
 #
 
-FROM eclipse-temurin:21-jdk-alpine
+FROM eclipse-temurin:24-jdk-alpine
+
+ENV JAVA_TOOL_OPTIONS="--add-opens=java.base/sun.nio.ch=org.jruby.dist --add-opens=java.base/sun.nio.ch=org.jruby.core"
 
 RUN apk add --no-cache git bash unzip zip imagemagick graphviz maven vim file ca-certificates curl
 
