@@ -20,7 +20,10 @@
 # @author Peter Withers <peter.withers@mpi.nl>
 #
 
-FROM eclipse-temurin:21-jdk-alpine
+FROM eclipse-temurin:24-jdk-alpine
+
+ENV JAVA_TOOL_OPTIONS="--add-opens=java.base/sun.nio.ch=org.jruby.dist --add-opens=java.base/sun.nio.ch=org.jruby.core"
+
 # RUN apt-get update
 # RUN apt-get -y upgrade
 # RUN apt-get -y install maven vim git
